<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.circularreveal.CircularRevealRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">

    <TextView
        android:id="@+id/create_emp_intro_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/create_employee"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/create_emp_intro_text"
        android:layout_marginTop="10dp"
        android:text="@string/employee_name"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/new_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text1"
        android:elevation="15dp"
        android:hint="@string/name"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:maxLength="30"
        android:textSize="20sp" />


    <TextView
        android:id="@+id/text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/new_name"
        android:layout_marginTop="10dp"
        android:text="@string/rank"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/rank"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/text2"
        android:elevation="15dp"
        android:hint="@string/rank"
        android:importantForAutofill="no"
        android:inputType="text"
        android:maxLength="10"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/text3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/new_name"
        android:layout_marginStart="185dp"
        android:layout_marginTop="10dp"
        android:text="@string/salary"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/salary"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/text3"
        android:layout_alignStart="@id/text3"
        android:elevation="15dp"
        android:hint="@string/salary"
        android:importantForAutofill="no"
        android:inputType="number"
        android:maxLength="10"
        android:textSize="20sp" />


    <TextView
        android:id="@+id/text4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/rank"
        android:layout_marginTop="10dp"
        android:text="@string/new_password"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/new_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text4"
        android:elevation="15dp"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:maxLength="25"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/text5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/new_password"
        android:layout_marginTop="10dp"
        android:text="@string/confirm_password"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text5"
        android:elevation="15dp"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:backgroundTintMode="src_in"
        android:inputType="textPassword"
        android:maxLength="25"
        android:textSize="20sp" />

    <Button
        android:id="@+id/create_emp_submit_bt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/confirm_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/submit"
        android:textSize="20sp"
        />

    <Button
        android:id="@+id/create_emp_back_bt"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/create_emp_submit_bt"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/back"
        android:textSize="20sp"
        />
</com.google.android.material.circularreveal.CircularRevealRelativeLayout>