<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.circularreveal.CircularRevealRelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    >


    <TextView
        android:id="@+id/text6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:text="@string/change_password"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/old_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text6"
        android:layout_marginTop="20dp"
        android:elevation="15dp"
        android:ems="10"
        android:hint="@string/enter_current_password"
        android:inputType="textPassword"
        android:textSize="20sp"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/ch_confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ch_new_password"
        android:layout_marginTop="15dp"
        android:elevation="15dp"
        android:ems="10"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:textSize="20sp"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/ch_new_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/old_password"
        android:layout_marginTop="25dp"
        android:elevation="15dp"
        android:ems="10"
        android:hint="@string/new_password"
        android:inputType="textPassword"
        android:textSize="20sp"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/ch_password_submit_bt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ch_confirm_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:text="@string/submit"
        android:textSize="20sp" />

    <Button
        android:id="@+id/ch_password_back_bt"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/ch_password_submit_bt"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/back"
        android:textSize="20sp" />

</com.google.android.material.circularreveal.CircularRevealRelativeLayout>