<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.circularreveal.CircularRevealRelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:text="@string/logs"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="65dp"
        android:text="@string/office_id"
        android:id="@+id/office_id"
        />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_marginTop="100dp"
        android:id="@+id/logs_list_view"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/logs_back_bt"
        android:layout_below="@id/logs_list_view"
        android:text="@string/back"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_data_found"
        android:textSize="25sp"
        android:layout_centerInParent="true"
        android:visibility="gone"
        android:id="@+id/no_data_found"
        />
</com.google.android.material.circularreveal.CircularRevealRelativeLayout>